# aoc

./: .gitignore  README.md  main.py  pyproject.toml  templates.py
2023/: day1.py
commands/: __init__.py  new.py  solve.py  test.py
core/: __init__.py  runner.py
solutions/2023/: 01.py
solutions/2024/: 03.py  04.py
solutions/2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
utils/: __init__.py  display.py  parser.py  paths.py  validation.py
