[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Erik van Raalte <erik.vanraalte@surf.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
